5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1785_3138.log
== TEST (2019-05-30 10:32:49) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m = ((v[i])**7 +(v[-1]**7)/n )1/7
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    m = ((v[i])**7 +(v[-1]**7)/n )1/7
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:51) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0

while(i<size(n)):
	m = v[i]**7

x = m/size(n)	
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:03) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0

while(i<size(n)):
	m = m + v[i]**7

x = m/size(n)	
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:27) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + v[i]**7

x = m/size(n)	
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:39) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7

x = m/size(n)	
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:30) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7

x = (m/size(n)**(1/7))	
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:06) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7

x = (m/size(n)**(1/7))	

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:30) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = (m/size(n)**(1/7))	

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:23) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = (m/size(n)**(1/7))	

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:25) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = (m/size(n)**(1/7))	

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:09) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = m/size(n)
y = x**1/7
print(round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:04) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = m/size(n)
y = x**(1/7)
print(round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:40:10) 
-- CODE:
from numpy import *
n = array(eval(input("Vetor: ")))
i=0
m=0
while(i<size(n)):
	m = m + n[i]**7
	i = i +1
x = m/size(n)
y = x**(1/7)
print(round(y,2))
-- EXECUTION TIME:
0.50622
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
6.38
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
5.33
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
4.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
